# audiobook_library/backend/routes/index.js
@@ -1,6 +1,8 @@
 const routes = require('express').Router();
+const audiobooksRoutes = require('./audiobooks');
 
 routes.use('/audiobooks', require('./audiobooks'));
+routes.use('/audiobooks', audiobooksRoutes);
 routes.use('/', require('./swagger'));
 
 routes.get('/', (req, res) => {
